--- a/qios-backend/public/CHIPS_Browser.html.html
+++ b/qios-backend/public/CHIPS_Browser.html.html
@@ -75,7 +75,7 @@
     const connectionStatus = document.getElementById('connection-status');
 
     // IMPORTANT: In local testing, this is correct. For deployment, you will change this URL.
-    const socket = io("http://localhost:3000");
+    const socket = io("https://qios-2.onrender.com");
 
     function log(message, type = 'info') {
         const p = document.createElement('p');
