--- a/qios-backend/public/QIOS_Admin_Panel.html.html
+++ b/qios-backend/public/QIOS_Admin_Panel.html.html
@@ -350,7 +350,7 @@
 </script>
 <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 <script>
-    const adminSocket = io("https://qios-back-office.onrender.com"); // <-- Use your live URL
+    const adminSocket = io("https://qios-2.onrender.com");
     
     adminSocket.on('connect', () => {
         console.log('Admin UI connected to Back Office');
