--- a/qios-backend/public/QIOS_Admin_Panel.html.html
+++ b/qios-backend/public/QIOS_Admin_Panel.html.html
@@ -10,89 +10,81 @@
         :root {
             --bg-color: #0f172a; --panel-bg-color: #1e293b; --border-color: rgba(56, 189, 248, 0.2);
             --text-primary: #e5e7eb; --text-secondary: #9ca3af; --accent-cyan: #00f2ea;
-            --accent-blue: #3b82f6; --accent-red: #f43f5e; --accent-green: #34d399;
+            --accent-blue: #3b82f6; --accent-red: #f43f5e; --accent-green: #22c55e;
             --accent-warn: #f59e0b; --font-family: 'Poppins', sans-serif;
         }
         *, *::before, *::after { box-sizing: border-box; }
         body { font-family: var(--font-family); background-color: var(--bg-color); color: var(--text-primary); padding: 2rem; display: flex; justify-content: center; align-items: flex-start; min-height: 100vh; }
-        .admin-panel { width: 1400px; max-width: 95%; background: none; padding: 0; display: grid; grid-template-columns: repeat(12, 1fr); grid-template-rows: auto; gap: 1.5rem; grid-template-areas: "header header header header header header header header header header header header" "stats stats stats stats stats stats stats stats stats stats stats stats" "ai ai ai ai entangle entangle entangle entangle qsim qsim qsim qsim" "ai ai ai ai entangle entangle entangle entangle log log log log"; }
+        .admin-panel { width: 1400px; max-width: 95%; background: none; padding: 0; display: grid; grid-template-columns: repeat(12, 1fr); grid-template-rows: auto; gap: 1.5rem; grid-template-areas: "header header header header header header header header header header header header" "stats stats stats stats stats stats stats stats stats stats stats stats" "nodes nodes nodes nodes nodes nodes log log log log log log"; }
         .panel { background: var(--panel-bg-color); border: 1px solid rgba(56, 189, 248, 0.1); border-radius: 16px; padding: 1.5rem; box-shadow: 0 4px 20px rgba(0,0,0,0.2); display: flex; flex-direction: column; }
         .panel-title { font-size: 1rem; font-weight: 500; color: var(--text-secondary); margin: 0 0 1.5rem 0; }
-        #header { grid-area: header; background: none; border: none; padding: 0 0 1rem 0; box-shadow: none; } #stats-container { grid-area: stats; display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.5rem; padding: 0 !important; background: none !important; border: none !important; box-shadow: none !important; } #ai-status { grid-area: ai; } #entanglement { grid-area: entangle; } #q-sim { grid-area: qsim; } #log { grid-area: log; }
-        #header h1 { margin: 0; font-size: 1.8rem; font-weight: 600; color: var(--text-primary); } #header p { margin: 0; font-size: 1rem; color: var(--text-secondary); font-weight: 300; }
-        .stat-card { display: grid; grid-template-columns: 1fr auto; grid-template-rows: auto auto auto; gap: 0.25rem 1rem; } .stat-card-title { grid-column: 1 / 2; color: var(--text-secondary); font-size: 1rem; } .stat-card-main { grid-column: 1 / 2; display: flex; align-items: baseline; gap: 0.5rem; margin-top: 0.5rem; } .stat-card-value { font-size: 1.75rem; font-weight: 600; color: var(--text-primary); line-height: 1; } .stat-card-subtitle { font-size: 0.8rem; color: var(--text-secondary); } .stat-card-index { grid-column: 2 / 3; grid-row: 1 / 4; display: flex; align-items: center; justify-content: center; background: rgba(0,0,0,0.2); border-radius: 8px; padding: 0 1rem; font-size: 1.25rem; font-weight: 600; } .progress-bar { grid-column: 1 / 3; height: 4px; background: rgba(0, 0, 0, 0.3); border-radius: 2px; margin-top: 1rem; overflow: hidden; } .progress-bar-inner { height: 100%; width: 50%; border-radius: 2px; transition: width 0.5s ease-in-out, background-color 0.5s ease; }
-        #quarantine-list { font-size: 0.9rem; margin-top: 1rem; } #quarantine-list div { background-color: rgba(239, 68, 68, 0.2); color: #fca5a5; padding: 0.5rem; border-radius: 6px; margin-bottom: 0.5rem; }
-        #simulation-log-list { list-style: none; padding: 0; margin: 0; flex-grow: 1; font-size: 0.9rem; } #simulation-log-list li { display: flex; align-items: center; margin-bottom: 0.75rem; } #simulation-log-list li .icon { width: 18px; height: 18px; margin-right: 0.75rem; display: flex; align-items: center; justify-content: center; } #simulation-log-list li .icon svg { width: 12px; height: 12px; }
+        #header { grid-area: header; } #stats-container { grid-area: stats; display: grid; grid-template-columns: repeat(3, 1fr); gap: 1.5rem; }
+        #node-trust-panel { grid-area: nodes; } #log { grid-area: log; }
+        .stat-card-value { font-size: 1.75rem; font-weight: 600; }
+        #simulation-log-list, #node-trust-list { list-style: none; padding: 0; margin: 0; flex-grow: 1; font-size: 0.9rem; }
+        #simulation-log-list li, .node-trust-item { display: flex; align-items: center; margin-bottom: 0.75rem; }
+        #simulation-log-list li .icon, .node-trust-item .icon { width: 18px; height: 18px; margin-right: 0.75rem; display: flex; align-items: center; justify-content: center; }
+        #simulation-log-list li .icon svg, .node-trust-item .icon svg { width: 12px; height: 12px; }
         #simulation-log-list li.success { color: var(--accent-green); } #simulation-log-list li.warn { color: var(--accent-warn); } #simulation-log-list li.info { color: var(--accent-blue); }
+        .trust-bar { flex-grow: 1; height: 8px; background-color: #374151; border-radius: 4px; margin: 0 1rem; }
+        .trust-bar-inner { height: 100%; border-radius: 4px; transition: width 0.5s ease; }
     </style>
 </head>
 <body>
     <div class="admin-panel">
-        <div id="header"><h1>CHIPS Protocol Admin Panel</h1><p>The back office for AI and browser management</p></div>
+        <div id="header" class="panel" style="background:none; border:none; box-shadow:none; padding: 0 0 1rem 0;"><h1>CHIPS Protocol Admin Panel</h1><p>The back office for AI and browser management</p></div>
         <div id="stats-container">
-            <div class="stat-card panel"><div class="stat-card-title">Active Nodes</div><div class="stat-card-main"><span id="stat-nodes-value" class="stat-card-value">0</span></div><div class="stat-card-index" style="color: var(--accent-blue);">LIVE</div><div class="progress-bar"><div class="progress-bar-inner" style="background: var(--accent-blue);"></div></div></div>
-            <div class="stat-card panel"><div class="stat-card-title">Treceability Score</div><div class="stat-card-main"><span id="stat-trace-value" class="stat-card-value">101</span></div><div class="stat-card-index" style="color: var(--accent-warn);">1.12</div><div class="progress-bar"><div id="stat-trace-progress" class="progress-bar-inner" style="background: var(--accent-warn);"></div></div></div>
-            <div class="stat-card panel"><div class="stat-card-title">Contradiction Index</div><div class="stat-card-main"><span id="stat-contra-value" class="stat-card-value">599</span></div><div class="stat-card-index" style="color: var(--accent-red);">1.2</div><div class="progress-bar"><div id="stat-contra-progress" class="progress-bar-inner" style="background: var(--accent-red);"></div></div></div>
-             <div id="quarantine-panel" class="panel"><div class="panel-title">AI Quarantine Status</div><div id="quarantine-list"></div></div>
+            <div class="stat-card panel"><div class="panel-title">Active Nodes</div><span id="stat-nodes-value" class="stat-card-value">0</span></div>
+            <div class="stat-card panel"><div class="panel-title">Traceability Score</div><span id="stat-trace-value" class="stat-card-value">101</span></div>
+            <div class="stat-card panel"><div class="panel-title">Contradiction Index</div><span id="stat-contra-value" class="stat-card-value">599</span></div>
         </div>
-        <div id="log" class="panel" style="grid-area: ai / span 12;"><h2 class="panel-title">Live Network Log</h2><ul id="simulation-log-list"></ul></div>
+        <div id="node-trust-panel" class="panel"><h2 class="panel-title">Node Trust Dashboard</h2><ul id="node-trust-list"></ul></div>
+        <div id="log" class="panel"><h2 class="panel-title">Live Network Log</h2><ul id="simulation-log-list"></ul></div>
     </div>
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         const elems = {
             nodes: document.getElementById('stat-nodes-value'),
-            trace: { val: document.getElementById('stat-trace-value'), prog: document.getElementById('stat-trace-progress') },
-            contra: { val: document.getElementById('stat-contra-value'), prog: document.getElementById('stat-contra-progress') },
+            trace: document.getElementById('stat-trace-value'),
+            contra: document.getElementById('stat-contra-value'),
             simLogList: document.getElementById('simulation-log-list'),
-            quarantineList: document.getElementById('quarantine-list')
+            nodeTrustList: document.getElementById('node-trust-list')
         };
 
-        const addLogEntry = (log) => {
-            const { type, message } = log;
-            const li = document.createElement('li');
-            li.className = type;
-            const iconMap = {
-                success: `<svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>`,
-                warn: `<svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path></svg>`,
-                info: `<svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>`
-            };
-            li.innerHTML = `<div class="icon">${iconMap[type] || ''}</div><span>${message}</span>`;
-            elems.simLogList.prepend(li);
-            if (elems.simLogList.children.length > 20) elems.simLogList.lastChild.remove();
-        };
+        const addLogEntry = (log) => { const { type, message } = log; const li = document.createElement('li'); li.className = type; const iconMap = { success: `<svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>`, warn: `<svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path></svg>`, info: `<svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>` }; li.innerHTML = `<div class="icon">${iconMap[type] || ''}</div><span>${message}</span>`; elems.simLogList.prepend(li); if (elems.simLogList.children.length > 20) elems.simLogList.lastChild.remove(); };
 
-        const updateQuarantineList = (nodes) => {
-            elems.quarantineList.innerHTML = '';
-            if (nodes.length === 0) {
-                elems.quarantineList.innerHTML = '<div style="background-color: rgba(52, 211, 153, 0.2); color: #6ee7b7;">System nominal. No nodes quarantined.</div>';
-            } else {
-                nodes.forEach(nodeId => {
-                    const div = document.createElement('div');
-                    div.textContent = `QUARANTINED: ${nodeId.substring(0,6)}...`;
-                    elems.quarantineList.appendChild(div);
-                });
+        const updateTrustList = (scores) => {
+            elems.nodeTrustList.innerHTML = '';
+            if (Object.keys(scores).length === 0) {
+                 elems.nodeTrustList.innerHTML = '<div style="color: var(--text-secondary);">No nodes connected.</div>';
+                 return;
+            }
+            for (const nodeId in scores) {
+                const score = scores[nodeId];
+                const li = document.createElement('li');
+                li.className = 'node-trust-item';
+                let color = 'var(--accent-green)';
+                if (score < 50) color = 'var(--accent-red)';
+                else if (score < 80) color = 'var(--accent-warn)';
+                
+                li.innerHTML = `
+                    <span>Node ${nodeId.substring(0,6)}...</span>
+                    <div class="trust-bar"><div class="trust-bar-inner" style="width: ${score}%; background-color: ${color};"></div></div>
+                    <span style="color: ${color}; font-weight: 600;">${score.toFixed(1)}</span>
+                `;
+                elems.nodeTrustList.appendChild(li);
             }
         };
 
-        // --- STABILITY UPGRADE ---
-        const adminSocket = io("https://qios-2.onrender.com", {
-            transports: ['websocket'] // Force WebSocket transport only
-        });
-
-        adminSocket.on('connect', () => {
-            elems.simLogList.innerHTML = '';
-            addLogEntry({ type: 'info', message: 'Connecting to Back Office...' });
-            adminSocket.emit('register_admin');
-        });
-
+        const adminSocket = io("https://qios-2.onrender.com", { transports: ['websocket'] });
+        adminSocket.on('connect', () => { elems.simLogList.innerHTML = ''; addLogEntry({ type: 'info', message: 'Connecting to Back Office...' }); adminSocket.emit('register_admin'); });
+        
         adminSocket.on('system_update', (data) => {
             elems.nodes.textContent = data.nodeCount;
-            elems.trace.val.textContent = Math.round(data.stats.traceability);
-            elems.trace.prog.style.width = `${(data.stats.traceability / 120) * 100}%`;
-            elems.contra.val.textContent = Math.round(data.stats.contradiction);
-            elems.contra.prog.style.width = `${(data.stats.contradiction / 620) * 100}%`;
-            updateQuarantineList(data.quarantined);
+            elems.trace.textContent = Math.round(data.stats.traceability);
+            elems.contra.textContent = Math.round(data.stats.contradiction);
+            updateTrustList(data.trustScores || {});
         });
 
         adminSocket.on('log_message', (log) => { addLogEntry(log); });
